@@ -35,6 +35,7 @@ namespace Tellico {
 
 class StateData {
 public:
+  StateData() : syntaxVersion(0), collType(0), defaultFields(false), loadImages(false), hasImages(false), showImageLoadErrors(true) {}
   QString text;
   QString error;
   QString ns; // namespace
@@ -53,6 +54,7 @@ public:
   bool defaultFields;
   bool loadImages;
   bool hasImages;
+  bool showImageLoadErrors;
 };
 
 class StateHandler {
